Add TSRG srg-mcp generation for FG2-era FML forks (Cleanroom)
detectRuntimeDeobfMapFormat(): inspects FMLDeobfuscatingRemapper.class
on the launch classpath for CL/FD/MD Utf8 constants. Stock Forge has
them → writes classic SRG; Cleanroom-style forks don't → writes TSRG.

Also sets up forked publishing under net.zznty group targeting
maven.zznty.ru (same pattern as ForgeGradle and MinecraftMavenizer).